# mlops-project

./: .gitignore  .pre-commit-config.yaml  README.md  data.dvc  models.dvc  notebooks.dvc  pyproject.toml
.dvc/: config
configs/: config.yaml  train.yaml
logistic-regression/: infer.py  train.py
logistic_regression/: infer.py  proba.py  tools.py  train.py
